--- a/app/src/main/res/layout/dynamicaddingitem.xml
+++ b/app/src/main/res/layout/dynamicaddingitem.xml
@@ -2,27 +2,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="4dp"
+    android:padding="10dp"
     android:orientation="horizontal">
     <ImageView
-        android:id="@+id/baseimageview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/proflie_white_foreground"/>
+        android:id="@+id/dynamicimage1"
+        android:layout_width="110dp"
+        android:layout_height="110dp"
+        android:src="@drawable/facebook"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="10dp">
         <TextView
-            android:id="@+id/serialNumber"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Number"
-            android:textColor="@color/white"
-            android:textSize="20sp"/>
-        <TextView
-            android:id="@+id/studentName"
+            android:id="@+id/studentName1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Name"
@@ -30,10 +24,10 @@
             android:textStyle="bold"
             android:textSize="20sp"/>
         <TextView
-            android:id="@+id/mobno"
+            android:id="@+id/dynamicdesc1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Mobile Number"
+            android:text="Description"
             android:textColor="@color/white"
             android:textSize="20sp"/>
     </LinearLayout>
