--- a/app/src/main/res/layout/recyclecardviewgrid.xml
+++ b/app/src/main/res/layout/recyclecardviewgrid.xml
@@ -35,6 +35,7 @@
                 android:layout_alignBottom="@+id/recyclerviewimage"
                 android:layout_marginBottom="-38dp"
                 android:layout_centerHorizontal="true"
+                android:textAlignment="center"
                 android:text="version name"
                 android:textColor="@color/black"
                 android:textSize="20dp"
