--- a/app/src/main/res/layout/fragment_array_adapter.xml
+++ b/app/src/main/res/layout/fragment_array_adapter.xml
@@ -3,13 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".bottomnavfrags.ArrayAdapterFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
-    <ListView
-        android:id="@+id/arrayadapterlistview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        <ListView
+            android:id="@+id/arrayadapterlistview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
 
 </FrameLayout>
