--- a/app/src/main/res/layout/griditemtouch.xml
+++ b/app/src/main/res/layout/griditemtouch.xml
@@ -21,6 +21,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Title"
+        android:textColor="@color/black"
+        android:textAlignment="center"
         android:textSize="16sp"
         android:textStyle="bold" />
 
@@ -29,6 +31,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Count"
+        android:textAlignment="center"
+        android:textColor="@color/black"
         android:textSize="14sp" />
 
 </LinearLayout>
