--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="lavender">#8692f7</color>
-    <color name="timetable_item_background">#F6E68F</color>
-    <color name="grid_item_background">#FFFFE0</color>
-    <color name="cream">#DBE0A8</color>
+    <color name="timetable_item_background">#ECDFCC</color>
+    <color name="grid_item_background">#aeb0b2</color>
+    <color name="dark_background">#1E201E</color>
 </resources>
