--- a/app/src/main/res/layout/activity_custom_list_view_base_adapter_example.xml
+++ b/app/src/main/res/layout/activity_custom_list_view_base_adapter_example.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:padding="8dp"
     android:orientation="vertical"
-    tools:context=".customlistviewbaseadapter.CustomListViewBaseAdapterExample">
+    tools:context=".learningadapter.customlistviewbaseadapter.CustomListViewBaseAdapterExample">
     <ListView
         android:id="@+id/baseadapterlistView"
         android:layout_width="match_parent"
