--- a/app/src/main/res/layout/activity_custom_grid_view_example.xml
+++ b/app/src/main/res/layout/activity_custom_grid_view_example.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".customgridview.CustomGridViewExample">
+    tools:context=".learningadapter.customgridview.CustomGridViewExample">
 
     <GridView
         android:id="@+id/gridViewexample"
