--- a/app/src/main/res/layout/activity_touch_landing_page.xml
+++ b/app/src/main/res/layout/activity_touch_landing_page.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".touchlandingpage.TouchLandingPage"
+    tools:context=".learningadapter.touchlandingpage.TouchLandingPage"
     android:background="@color/dark_background">
 
     <androidx.recyclerview.widget.RecyclerView
