--- a/app/src/main/res/layout/custom_list_view_array_adapter_example.xml
+++ b/app/src/main/res/layout/custom_list_view_array_adapter_example.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".customlistviewarrayadapter.CustomListViewArrayAdapterExample">
+    tools:context=".learningadapter.customlistviewarrayadapter.CustomListViewArrayAdapterExample">
 
     <ListView
         android:layout_width="match_parent"
