--- a/app/src/main/res/layout/fragment_array_adapter.xml
+++ b/app/src/main/res/layout/fragment_array_adapter.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".bottomnavfrags.ArrayAdapterFragment">
+    tools:context=".landingfragments.ArrayAdapterFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
