Minor changes and removed residual code

--- a/app/src/main/res/menu/bottom_bar.xml
+++ b/app/src/main/res/menu/bottom_bar.xml
@@ -4,13 +4,13 @@
         android:id="@+id/home"
         android:title="Home"
         android:icon="@drawable/baseline_home_24"
-        android:orderInCategory="1"
+        android:orderInCategory="2"
         />
     <item
         android:id="@+id/arrayadapter"
         android:title="Array Adapter"
         android:icon="@drawable/arrayadapter"
-        android:orderInCategory="2"
+        android:orderInCategory="1"
         />
     <item
         android:id="@+id/action_settings"
@@ -22,6 +22,12 @@
         android:id="@+id/customfrag"
         android:title="Dayummmm"
         android:icon="@drawable/baseline_audiotrack_24"
+        android:orderInCategory="4"
+        />
+    <item
+        android:id="@+id/locationandmaps"
+        android:title="Location"
+        android:icon="@drawable/baseline_location_pin_24"
         android:orderInCategory="4"
         />
 </menu>
