--- a/app/src/main/res/layout/activity_coroutines_examples.xml
+++ b/app/src/main/res/layout/activity_coroutines_examples.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".learningcoroutines.CoroutinesExamples">
+    tools:context=".backgroundprocesses.learningcoroutines.CoroutinesExamples">
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/coroutinetabLayout"
