--- a/app/src/main/res/layout/fragment_pdf_doc.xml
+++ b/app/src/main/res/layout/fragment_pdf_doc.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".learningcoroutines.PdfDoc">
+    tools:context=".backgroundprocesses.learningcoroutines.PdfDoc">
 
     <LinearLayout
         android:layout_width="match_parent"
