Implemented Floating action button and removed unused code

--- a/app/src/main/res/layout/activity_star.xml
+++ b/app/src/main/res/layout/activity_star.xml
@@ -5,6 +5,13 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".backgroundprocesses.broadcastreceiver.AirplaneModeReceiverMain">
+    tools:context=".staractivity.StarActivity">
+
+    <ListView
+        android:id="@+id/starlistview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
