--- a/app/src/main/res/layout/activity_sqlite_main.xml
+++ b/app/src/main/res/layout/activity_sqlite_main.xml
@@ -3,81 +3,190 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".storageoptions.sqllitedatabase.SQLiteMain">
 
-    <com.google.android.material.textfield.TextInputLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:layout_centerHorizontal="true"
-        >
+        android:orientation="horizontal">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/sqllitenameed"
+        <ImageView
+            android:id="@+id/sqlliteuserimage"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginTop="40dp"
+            android:src="@drawable/profile_white_foreground"/>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Name" />
+            android:orientation="vertical">
 
-    </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:layout_centerHorizontal="true"
+                >
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:layout_centerHorizontal="true"
-        >
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/sqllitenameed"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Name" />
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/sqlliteageed"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Age" />
+            </com.google.android.material.textfield.TextInputLayout>
 
-    </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:layout_centerHorizontal="true"
+                >
 
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/sqlliteageed"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Age" />
 
-    <Button
-        android:id="@+id/sqliteadddata"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Add"
-        android:layout_gravity="center"/>
+            </com.google.android.material.textfield.TextInputLayout>
 
-    <Button
-        android:id="@+id/sqliteprintdata"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Print"
-        android:layout_gravity="center"/>
+        </LinearLayout>
 
-    <Button
-        android:id="@+id/sqlitedeletedata"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Delete"
-        android:layout_gravity="center"/>
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:padding="10dp">
-        <TextView
-            android:id="@+id/sqlitenametv"
-            android:layout_width="200dp"
-            android:layout_height="match_parent"
-            android:text="Name"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-            />
-
-        <TextView
-            android:id="@+id/sqliteagetv"
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="200dp"
-            android:layout_height="match_parent"
-            android:text="Age"
-            />
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:layout_centerHorizontal="true"
+            >
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/sqlliterangestarted"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Range Age Start" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:layout_centerHorizontal="true"
+            >
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/sqlliterangeended"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Range Age End" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center">
+
+        <Button
+            android:id="@+id/sqliteadddata"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Add"
+            android:layout_gravity="center"
+            android:layout_marginEnd="7dp"/>
+
+        <Button
+            android:id="@+id/sqliteprintdata"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Print"
+            android:layout_gravity="center"
+            android:layout_marginEnd="7dp"/>
+
+        <Button
+            android:id="@+id/sqlitefetchrange"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Range"
+            android:layout_gravity="center"
+            android:layout_marginEnd="7dp"/>
+
+        <Button
+            android:id="@+id/sqlitedeletedata"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Delete"
+            android:layout_gravity="center"
+            android:layout_marginEnd="7dp"/>
+
+    </LinearLayout>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="10dp"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="4dp">
+
+        <TableLayout
+            android:id="@+id/sqlitetableLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:stretchColumns="0,1">
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#E0E0E0"> <!-- Light gray background for header -->
+
+                <TextView
+                    android:id="@+id/sqlliteimageview"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="User Image"
+                    android:textAlignment="center"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"
+                    android:padding="8dp" />
+
+                <TextView
+                    android:id="@+id/sqlitenametv"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Name"
+                    android:textAlignment="center"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"
+                    android:padding="8dp" />
+
+                <TextView
+                    android:id="@+id/sqliteagetv"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Age"
+                    android:textAlignment="center"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"
+                    android:padding="8dp" />
+
+            </TableRow>
+        </TableLayout>
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
