--- a/app/src/main/res/menu/header.xml
+++ b/app/src/main/res/menu/header.xml
@@ -1,89 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-<!--    <item android:id="@+id/customLVAA"-->
-<!--        android:title="Custom List View Array Adapter"-->
-<!--        android:icon="@drawable/baseline_more_vert_24"-->
-<!--        app:showAsAction="ifRoom|collapseActionView"-->
-<!--        android:orderInCategory="1"/>-->
-<!--    <item android:id="@+id/customLVAA"-->
-<!--        android:title="Custom List View Array Adapter"-->
-<!--        android:icon="@drawable/baseline_more_vert_24"-->
-<!--        app:showAsAction="collapseActionView"-->
-<!--        android:orderInCategory="1"/>-->
-<!--    <item android:id="@+id/customLVBA"-->
-<!--        android:title="Custom List View Base Adapter"-->
-<!--        android:icon="@drawable/baseline_more_vert_24"-->
-<!--        app:showAsAction="collapseActionView"-->
-<!--        android:orderInCategory="2"/>-->
     <item android:id="@+id/exit"
         android:title="Exit"
-        android:icon="@drawable/baseline_exit_to_app_24"
+        android:icon="@drawable/exit_icon"
         app:showAsAction="ifRoom|collapseActionView"
-        android:orderInCategory="3"/>
-<!--    <item android:id="@+id/rating_activity"-->
-<!--        android:title="Rating Activity"-->
-<!--        android:icon="@drawable/baseline_stars_24"-->
-<!--        app:showAsAction="ifRoom|collapseActionView"-->
-<!--        android:orderInCategory="3"/>-->
-<!--    <item android:id="@+id/custom_toast"-->
-<!--        android:title="Custom Toast"-->
-<!--        android:icon="@drawable/baseline_exit_to_app_24"-->
-<!--        app:showAsAction="ifRoom|collapseActionView"-->
-<!--        android:orderInCategory="4"/>-->
-<!--    <item android:id="@+id/notification"-->
-<!--        android:title="Notification"-->
-<!--        android:icon="@drawable/baseline_exit_to_app_24"-->
-<!--        app:showAsAction="ifRoom|collapseActionView"-->
-<!--        android:orderInCategory="5"/>-->
-<!--    <item android:id="@+id/alarmManager"-->
-<!--        android:title="Alarm"-->
-<!--        android:icon="@drawable/baseline_exit_to_app_24"-->
-<!--        app:showAsAction="ifRoom|collapseActionView"-->
-<!--        android:orderInCategory="6"/>-->
-<!--    <item android:id="@+id/dateTime"-->
-<!--        android:title="Date Time Picker"-->
-<!--        android:icon="@drawable/baseline_exit_to_app_24"-->
-<!--        app:showAsAction="ifRoom|collapseActionView"-->
-<!--        android:orderInCategory="7"/>-->
-<!--    <item android:id="@+id/navigationdrawer"-->
-<!--        android:title="Navigation Drawer"-->
-<!--        android:icon="@drawable/baseline_exit_to_app_24"-->
-<!--        app:showAsAction="ifRoom|collapseActionView"-->
-<!--        android:orderInCategory="8"/>-->
-<!--    <item android:id="@+id/Fragment"-->
-<!--        android:title="Fragments"-->
-<!--        android:icon="@drawable/baseline_exit_to_app_24"-->
-<!--        app:showAsAction="ifRoom|collapseActionView"-->
-<!--        android:orderInCategory="9"/>-->
-<!--    <item android:id="@+id/sharedprefrences"-->
-<!--        android:title="Shared Preferences"-->
-<!--        android:icon="@drawable/baseline_exit_to_app_24"-->
-<!--        app:showAsAction="ifRoom|collapseActionView"-->
-<!--        android:orderInCategory="10"/>-->
-<!--    <item android:id="@+id/customviews"-->
-<!--        android:title="Custom Views"-->
-<!--        android:icon="@drawable/baseline_exit_to_app_24"-->
-<!--        app:showAsAction="ifRoom|collapseActionView"-->
-<!--        android:orderInCategory="11"/>-->
-<!--    <item android:id="@+id/filestoragedemo"-->
-<!--        android:title="File Storage"-->
-<!--        android:icon="@drawable/baseline_exit_to_app_24"-->
-<!--        app:showAsAction="ifRoom|collapseActionView"-->
-<!--        android:orderInCategory="12"/>-->
-<!--    <item android:id="@+id/externalfilestorage"-->
-<!--        android:title="External File Storage"-->
-<!--        android:icon="@drawable/baseline_exit_to_app_24"-->
-<!--        app:showAsAction="ifRoom|collapseActionView"-->
-<!--        android:orderInCategory="13"/>-->
-<!--    <item android:id="@+id/fragmentswipe"-->
-<!--        android:title="Fragment Swipe"-->
-<!--        android:icon="@drawable/baseline_exit_to_app_24"-->
-<!--        app:showAsAction="ifRoom|collapseActionView"-->
-<!--        android:orderInCategory="14"/>-->
-<!--    <item android:id="@+id/cardview"-->
-<!--        android:title="Card View"-->
-<!--        android:icon="@drawable/baseline_exit_to_app_24"-->
-<!--        app:showAsAction="ifRoom|collapseActionView"-->
-<!--        android:orderInCategory="14"/>-->
+        android:orderInCategory="1"/>
 </menu>
