--- a/app/src/main/res/layout/fragment_location.xml
+++ b/app/src/main/res/layout/fragment_location.xml
@@ -5,10 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".landingfragments.LocationAndMapsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ListView
+        android:id="@+id/locationlistview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Location Frag" />
+        android:layout_height="match_parent"/>
 
 </FrameLayout>
